--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body{
     font-family: 'Playfair Display', serif;
 }
 
+hr{
+    margin: 2rem 0rem;
+}
+
 .container{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -23,6 +27,7 @@ body{
 .link{
     text-decoration: none;
     padding: 0.5rem 1rem;
+    font-weight: 900;
 }
 
 .link-primary{
@@ -36,3 +41,15 @@ body{
     border-radius: 0.5rem;
     border: 1px solid var(--primary-color)
 }
+
+/* Lists */
+
+.list-non-bullet{
+    list-style: none;
+}
+
+.list-item-inline{
+    display: inline;
+    padding: 0rem 0.5rem;
+}
+
