--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 
 :root {
     --primary-color: #6EE7B7;
+    --dark-gray: #6B7280
 }
 
 body {
@@ -77,4 +78,26 @@ hr {
 
 .navigation .link-active{
     font-weight:bolder;
+}
+
+
+/* Header */
+
+.header{
+    padding: 2rem;
+}
+
+.hero .hero-img{
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading{
+    padding-top: 1rem;
+    color: var(--dark-gray);
+}
+
+.hero .hero-heading .heading-inverted{
+    color: var(--primary-color);
 }
