--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
 
 :root {
     --primary-color: #6EE7B7;
-    --dark-gray: #6B7280
+    --dark-gray: #6B7280;
+    --dark-green: #10B981;
+    --off-white: #F3F4F6;
 }
 
 body {
@@ -56,48 +58,64 @@ hr {
 
 /* Navigation Section */
 
-.navigation{
+.navigation {
     background-color: var(--primary-color);
     color: black;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
 
-.navigation .nav-brand{
+.navigation .nav-brand {
     font-weight: bold;
     font-size: 1.1rem;
 }
 
-.navigation .link{
+.navigation .link {
     color: black;
 }
 
-.navigation .nav-pills{
+.navigation .nav-pills {
     text-align: right;
 }
 
-.navigation .link-active{
-    font-weight:bolder;
+.navigation .link-active {
+    font-weight: bolder;
 }
 
 
 /* Header */
 
-.header{
+.header {
     padding: 2rem;
 }
 
-.hero .hero-img{
+.hero .hero-img {
     max-width: 350px;
     display: block;
     margin: auto;
 }
 
-.hero .hero-heading{
+.hero .hero-heading {
     padding-top: 1rem;
     color: var(--dark-gray);
+    text-align: center;
 }
 
-.hero .hero-heading .heading-inverted{
-    color: var(--primary-color);
+.hero .hero-heading .heading-inverted {
+    color: var(--dark-green);
+}
+
+/* Sections */
+
+.section{
+    padding: 2rem;
+}
+
+.section h1 {
+    text-align: center;
+
+}
+
+.ow{
+    background-color: var(--off-white);
 }
