--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,8 @@ hr {
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-weight: 900;
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
 }
 
 .link-primary {
@@ -43,7 +45,7 @@ hr {
 .link-secondary {
     color: black;
     border-radius: 0.5rem;
-    border: 1px solid var(--primary-color)
+    border: 1px solid var(--dark-green)
 }
 
 /* Lists */
@@ -137,4 +139,9 @@ hr {
 
 .footer ul{
     padding-inline-start: 0px;
+}
+
+.footer .footer-header{
+    font-weight: bold;
+    font-size: large;
 }
