--- a/styles.css
+++ b/styles.css
@@ -147,3 +147,10 @@ hr {
     font-weight: bold;
     font-size: large;
 }
+
+/* Blogs  */
+
+.blog{
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+}
