--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ hr {
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-weight: 900;
-    /* margin-top: 1rem;
-    margin-bottom: 1rem; */
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .link-primary {
@@ -130,7 +130,7 @@ hr {
 
 .footer{
     background-color: var(--primary-color);
-    padding: 2rem 0rem;
+    padding: 5rem 0rem;
     text-align: center;
     color: black;
     border-top-right-radius: 1rem;
@@ -154,6 +154,8 @@ hr {
 .blog{
     padding-top: 2rem;
     padding-bottom: 3rem;
+    margin: 0;
+    padding: 0;
 }
 
 .para{
