--- a/styles.css
+++ b/styles.css
@@ -146,8 +146,10 @@ hr {
 
 .footer .footer-header{
     font-weight: bold;
-    font-size: large;
+    font-size: 1.5rem;
+    margin: auto;
 }
+
 
 /* Blogs  */
 
