--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
 
 :root {
-    --primary-color: #6EE7B7;
+    --primary-color: #333d29;
     --dark-gray: #6B7280;
     --dark-green: #10B981;
     --off-white: #F3F4F6;
@@ -44,12 +44,12 @@ hr {
     margin: 1rem auto; */
     background-color: var(--primary-color);
     border-radius: 0.5rem;
-    color: black;
+    color: white;
     margin: 0.5rem 0.5rem;
 }
 
 .link-secondary {
-    color: black;
+    color: var(--primary-color);
     border: 1px solid  var(--primary-color);
     border-radius: 0.5rem;
     margin: 0.5rem 0.5rem;
@@ -76,7 +76,7 @@ hr {
 
 .navigation {
     background-color: var(--primary-color);
-    color: black;
+    color: white;
     padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
@@ -87,7 +87,7 @@ hr {
 }
 
 .navigation .link {
-    color: black;
+    color: white;
     margin-right: 3rem;
 }
 
@@ -150,7 +150,7 @@ hr {
 }
 
 .footer .link{
-    color: black;
+    color: white;
 }
 
 .footer ul{
@@ -161,6 +161,7 @@ hr {
     font-weight: bold;
     font-size: 1.5rem;
     margin: auto;
+    color: white;
 }
 
 
