--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Kaisei+Decol:wght@500&display=swap');
+
 
 :root {
     --primary-color: #333d29;
     --dark-gray: #6B7280;
     --dark-green: #10B981;
-    --off-white: #F3F4F6;
+    --off-olive: #c2c5aa;
 }
 
 body {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Kaisei Decol', serif;    
     margin: 0px;
+
 }
 
 hr {
@@ -36,12 +40,6 @@ hr {
 }
 
 .link-primary {
-    /* max-width: 90px;
-    padding: 0.6rem 1.2rem;
-    background-color: var(--primary-color);
-    border-radius: 0.5rem;
-    color: black;
-    margin: 1rem auto; */
     background-color: var(--primary-color);
     border-radius: 0.5rem;
     color: white;
@@ -53,12 +51,7 @@ hr {
     border: 1px solid  var(--primary-color);
     border-radius: 0.5rem;
     margin: 0.5rem 0.5rem;
-    /* max-width: 90px;
-    color: black;
-    padding: 0.6rem 1.2rem;
-    border-radius: 0.5rem;
-    border: 1px solid var(--dark-green);
-    margin: auto; */
+
 }
 
 /* Lists */
@@ -121,7 +114,7 @@ hr {
 }
 
 .hero .hero-heading .heading-inverted {
-    color: var(--dark-green);
+    color: var(--primary-color);
 }
 
 /* Sections */
@@ -136,7 +129,7 @@ hr {
 }
 
 .ow{
-    background-color: var(--off-white);
+    background-color: var(--off-olive);
 }
 
 /* Footer */
