--- a/styles.css
+++ b/styles.css
@@ -135,11 +135,13 @@ hr {
 /* Footer */
 
 .footer{
+
     background-color: var(--primary-color);
     padding: 3rem 0rem;
     text-align: center;
     color: black;
     border-top-right-radius: 1rem;
+
 }
 
 .footer .link{
@@ -149,6 +151,10 @@ hr {
 .footer ul{
     padding-inline-start: 0px;
     margin-top: 1rem;
+}
+
+.footer-blog{
+    margin-top: 2rem;
 }
 
 .footer .footer-header{
@@ -170,6 +176,17 @@ hr {
 
 .para{
     font-size: larger;
+}
+
+.blog-link{
+    text-decoration: none;
+    padding: 0.4rem;
+    font-weight: 900;
+    /* margin-bottom: 2rem; */
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white;
+
 }
 
 @media (max-width: 900px) {
